.vscode/allianceuat_compare/force-app/main/default/objects/Payee_Service__c/Payee_Service__c.object-meta.xml
<CustomObject>
    <label>Payee Service</label>
    <nameField>
        <displayFormat>Payee Service-{0000000000}</displayFormat>
        <label>Payee Service Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payee Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>