.vscode/allianceuat_compare/force-app/main/default/objects/Payee_Service__c/fields/Award_Classifications__c.field-meta.xml
<CustomField>
    <fullName>Award_Classifications__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Award Classifications</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>tc9_et__Award_Classifications_and_Levels__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Award Classification</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>tc9_et__Award_Classifications_and_Levels__c</referenceTo>
    <relationshipLabel>Payee Services</relationshipLabel>
    <relationshipName>Payee_Services</relationshipName>
    <type>Lookup</type>
</CustomField>