.vscode/allianceuat_compare/force-app/main/default/objects/Payee_Service__c/fields/Award_Level__c.field-meta.xml
<CustomField>
    <fullName>Award_Level__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Award Level</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>tc9_et__Award_Classifications_and_Levels__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Award Level</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>tc9_et__Award_Classifications_and_Levels__c</referenceTo>
    <relationshipLabel>Payee Services (Award Level)</relationshipLabel>
    <relationshipName>Payee_Services1</relationshipName>
    <type>Lookup</type>
</CustomField>