.vscode/allianceuat_compare/force-app/main/default/objects/Payee_Service__c/fields/Commencement_Date__c.field-meta.xml
<CustomField>
    <fullName>Commencement_Date__c</fullName>
    <label>Commencement Date</label>
    <type>Date</type>
</CustomField>