.vscode/allianceuat_compare/force-app/main/default/objects/Payee_Service__c/fields/Last_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Last_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Assignment</label>
    <referenceTo>tc9_pr__Assignment__c</referenceTo>
    <relationshipLabel>Payee Services</relationshipLabel>
    <relationshipName>Payee_Services</relationshipName>
    <type>Lookup</type>
</CustomField>