.vscode/allianceuat_compare/force-app/main/default/objects/Payee_Service__c/fields/Payee__c.field-meta.xml
<CustomField>
    <fullName>Payee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payee</label>
    <referenceTo>tc9_pr__Payee__c</referenceTo>
    <relationshipLabel>Payee Services</relationshipLabel>
    <relationshipName>Payee_Services</relationshipName>
    <type>Lookup</type>
</CustomField>