.vscode/allianceuat_compare/force-app/main/default/objects/Payee_Service__c/fields/Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours__c</fullName>
    <label>Total Hours</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>