.vscode/allianceuat_compare/force-app/main/default/objects/Payee_Service__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Payee__c</columns>
    <columns>Award_Classifications__c</columns>
    <columns>Award_Level__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>